21-AGIC-End2End-SSL/kube-manifests/02-myapp-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-nginx-deployment
  labels:
    app: myapp-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-nginx
  template:
    metadata:
      labels:
        app: myapp-nginx
    spec:
      containers:
        - name: myapp-nginx
          image: ghcr.io/stacksimplify/kubenginx:1.0.0
          ports:
            - containerPort: 443
          volumeMounts:
          - mountPath: /etc/nginx/ssl
            name: backend-ssl-certs-volume
          - mountPath: /etc/nginx/conf.d
            name: nginx-configfile-volume
      volumes:
      - name: backend-ssl-certs-volume
        secret:
          secretName: backend-tls-secret
      - name: nginx-configfile-volume
        configMap:
          name: nginx-configfile-cm
