21-AGIC-End2End-SSL/kube-manifests/03-myapp-ClusterIP-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-nginx-clusterip-service
  labels:
    app: myapp-nginx
spec:
  type: ClusterIP
  selector:
    app: myapp-nginx
  ports:
    - port: 443
      targetPort: 443
